@@ -260,7 +260,9 @@ namespace Astroid {
         ustring query = kv.second.data();
 
         log << info << "astroid: got query: " << name << ": " << query << endl;
-        mw->add_mode (new ThreadIndex (mw, query));
+        Mode * ti = new ThreadIndex (mw, query);
+        ti->invincible = true; // set startup queries to be invincible
+        mw->add_mode (ti);
       }
 
       mw->set_active (0);
