@@ -1,3 +1,7 @@
+==
+
+* Startup queries are invincible.
+
 == v0.4 / 2015-08-15
 
 * Mark threads with 't' or 'T' and apply actions to all marked threads
